Test/Files/Parser/FullParserTestCases/Bad/FullTests/Out/testcase95-03.out

Parse error on line 3:
... System.out.println();                
-----------------------^
Expecting '!', '-', 'new', 'ID', 'this', 'Integer', 'null', 'true', 'false', '('